--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "prepublish": "npm run lint && npm run test",
+    "prepublish": "npm run lint",
     "jscodeshift": "jscodeshift"
   },
   "dependencies": {
